--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
-  <img src="images/logo.png" alt="ASK Green House Logo" class="logo">
-  <h1>ASK Green House</h1>
-  <p>Fresh, High-Value Vegetables Year-Round</p>
-</header>
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,11 +8,14 @@
 </head>
 <body>
 
+  <!-- Header -->
   <header>
+    <img src="images/logo.png" alt="ASK Green House Logo" class="logo">
     <h1>ASK Green House</h1>
-    <p>Fresh, High-Value Vegetables Year-Round </p>
+    <p>Fresh, High-Value Vegetables Year-Round</p>
   </header>
 
+  <!-- Navigation -->
   <nav>
     <a href="#about">About</a>
     <a href="#crops">Crops</a>
@@ -26,6 +23,7 @@
     <a href="#contact">Contact</a>
   </nav>
 
+  <!-- About Section -->
   <section id="about">
     <h2>About Us</h2>
     <p>ASK Green House is a greenhouse farming venture in Mbarara, Uganda. 
@@ -33,6 +31,7 @@
        Our goal is to provide fresh, premium-quality vegetables to supermarkets, restaurants, and households.</p>
   </section>
 
+  <!-- Crops Section -->
   <section id="crops">
     <h2>Our Crops</h2>
     <div class="crops">
@@ -42,16 +41,18 @@
       <div class="crop"><img src="images/cabbage.jpg" alt="Cabbage"><h3>Cabbage</h3></div>
       <div class="crop"><img src="images/green-pepper.jpg" alt="Green Pepper"><h3>Green Pepper</h3></div>
       <div class="crop"><img src="images/chilli.jpg" alt="Chilli"><h3>Chilli</h3></div>
-      </div>
+      <div class="crop"><img src="images/eggplant.jpg" alt="Eggplant"><h3>Eggplant</h3></div>
     </div>
   </section>
 
+  <!-- Services Section -->
   <section id="services">
     <h2>Our Services</h2>
     <p>We supply fresh, greenhouse-grown vegetables directly to supermarkets, restaurants, and local markets in Mbarara and surrounding areas. 
        Our controlled greenhouse ensures consistent, high-quality produce throughout the year.</p>
   </section>
 
+  <!-- Contact Section -->
   <section id="contact">
     <h2>Contact Us</h2>
     <div class="contact-info">
@@ -65,7 +66,7 @@
       </div>
     </div>
 
-    <div style="margin-top:30px;">
+    <div class="contact-form">
       <h3>Place an Order / Message</h3>
       <form>
         <input type="text" placeholder="Your Name" required>
@@ -77,6 +78,7 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 ASK Green House. All rights reserved.</p>
   </footer>
