--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 
-  <!-- Header -->
+  <!-- HEADER -->
   <header>
     <img src="images/logo.png" alt="ASK Green House Logo" class="logo">
-    <h1>ASK Green House</h1>
-    <p>Fresh, High-Value Vegetables Year-Round</p>
+    <div>
+      <h1>ASK Green House</h1>
+      <p>Fresh, High-Value Vegetables Year-Round</p>
+    </div>
   </header>
 
-  <!-- Navigation -->
+  <!-- NAVIGATION -->
   <nav>
     <a href="#about">About</a>
     <a href="#crops">Crops</a>
@@ -23,42 +25,83 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <!-- About Section -->
+  <!-- ABOUT -->
   <section id="about">
     <h2>About Us</h2>
-    <p>ASK Green House is a greenhouse farming venture in Mbarara, Uganda. 
-       We grow high-value vegetables year-round including tomatoes, onions, spinach, cabbage, green pepper, and chilli. 
-       Our goal is to provide fresh, premium-quality vegetables to supermarkets, restaurants, and households.</p>
+    <p>
+      ASK Green House is a greenhouse farming venture in Mbarara, Uganda. 
+      We grow high-value vegetables year-round including tomatoes, onions, spinach, cabbage, green pepper, and chilli. 
+      Our goal is to provide fresh, premium-quality vegetables to supermarkets, restaurants, and households.
+    </p>
   </section>
 
-  <!-- Crops Section -->
+  <!-- CROPS -->
   <section id="crops">
     <h2>Our Crops</h2>
+
     <div class="crops">
-      <div class="crop"><img src="images/tomato.jpg" alt="Tomatoes"><h3>Tomatoes</h3></div>
-      <div class="crop"><img src="images/onion.jpg" alt="Onions"><h3>Onions</h3></div>
-      <div class="crop"><img src="images/spinach.jpg" alt="Spinach"><h3>Spinach</h3></div>
-      <div class="crop"><img src="images/cabbage.jpg" alt="Cabbage"><h3>Cabbage</h3></div>
-      <div class="crop"><img src="images/green-pepper.jpg" alt="Green Pepper"><h3>Green Pepper</h3></div>
-      <div class="crop"><img src="images/chilli.jpg" alt="Chilli"><h3>Chilli</h3></div>
+
+      <div class="crop">
+        <img src="images/tomato.jpg" alt="Tomatoes">
+        <h3>Tomatoes</h3>
+      </div>
+
+      <div class="crop">
+        <img src="images/onion.jpg" alt="Onions">
+        <h3>Onions</h3>
+      </div>
+
+      <div class="crop">
+        <img src="images/spinach.jpg" alt="Spinach">
+        <h3>Spinach</h3>
+      </div>
+
+      <div class="crop">
+        <img src="images/cabbage.jpg" alt="Cabbage">
+        <h3>Cabbage</h3>
+      </div>
+
+      <div class="crop">
+        <img src="images/green-pepper.jpg" alt="Green Pepper">
+        <h3>Green Pepper</h3>
+      </div>
+
+      <div class="crop">
+        <img src="images/chilli.jpg" alt="Chilli">
+        <h3>Chilli</h3>
+      </div>
+
     </div>
   </section>
 
-  <!-- Services Section -->
+  <!-- SERVICES -->
   <section id="services">
     <h2>Our Services</h2>
-    <p>We supply fresh, greenhouse-grown vegetables directly to supermarkets, restaurants, and local markets in Mbarara and surrounding areas. 
-       Our controlled greenhouse ensures consistent, high-quality produce throughout the year.</p>
+    <p>
+      We supply fresh, greenhouse-grown vegetables directly to supermarkets, restaurants, 
+      and local markets in Mbarara and surrounding areas. 
+      Our controlled greenhouse ensures consistent, high-quality produce throughout the year.
+    </p>
   </section>
 
-  <!-- Contact Section -->
+  <!-- CONTACT -->
   <section id="contact">
     <h2>Contact Us</h2>
+
     <div class="contact-info">
-      <div class="contact-item"><h3>Location</h3><p>Mbarara, Uganda</p></div>
-      <div class="contact-item"><h3>Email</h3><p>wendy@askgreenhouse.ug</p></div>
       <div class="contact-item">
-        <h3>Phone</h3><p>+256 786 377 507</p>
+        <h3>Location</h3>
+        <p>Mbarara, Uganda</p>
+      </div>
+
+      <div class="contact-item">
+        <h3>Email</h3>
+        <p>wendy@askgreenhouse.ug</p>
+      </div>
+
+      <div class="contact-item">
+        <h3>Phone</h3>
+        <p>+256 786 377 507</p>
         <a href="https://wa.me/256786377507" target="_blank">
           <button>Chat on WhatsApp</button>
         </a>
@@ -67,6 +110,7 @@
 
     <div class="contact-form">
       <h3>Place an Order / Message</h3>
+
       <form>
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
@@ -75,13 +119,12 @@
         <button type="submit">Submit</button>
       </form>
     </div>
+
   </section>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 ASK Green House. All rights reserved.</p>
   </footer>
 
 </body>
 </html>
-
