--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- NAVIGATION -->
   <nav>
     <a href="#about">About</a>
-    <a href="#crops">Crops</a>
+    <a href="#crops">Vegetables</a>
     <a href="#services">Services</a>
     <a href="#contact">Contact</a>
   </nav>
@@ -35,9 +35,9 @@
     </p>
   </section>
 
-  <!-- CROPS -->
-  <section id="crops">
-    <h2>Our Crops</h2>
+  <!-- Vegetables -->
+  <section id="Vegetables">
+    <h2>Our Vegetables</h2>
 
     <div class="crops">
 
@@ -128,3 +128,4 @@
 
 </body>
 </html>
+
